--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.0",
     "typescript": "^4.5.4",
-    "vite": "^2.9.0",
+    "unplugin-auto-import": "^0.12.1",
+    "vite": "^3.2.5",
     "vue-tsc": "^0.29.8"
   }
 }
