完成欢迎界面CSS

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "sass": "^1.57.1",
+    "scss": "^0.2.4",
     "vue": "^3.2.25",
     "vue-router": "^4.1.6"
   },
