封装 useSwipe Hook

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "sass": "^1.57.1",
     "scss": "^0.2.4",
+    "svgo": "^3.0.2",
+    "svgstore": "^3.0.1",
     "vue": "^3.2.25",
     "vue-router": "^4.1.6"
   },
