--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "scss": "^0.2.4",
     "svgo": "^3.0.2",
     "svgstore": "^3.0.1",
+    "vant": "3.4.8",
     "vue": "^3.2.25",
     "vue-router": "^4.1.6"
   },
@@ -19,8 +20,8 @@
     "@vitejs/plugin-vue": "^2.3.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "typescript": "^4.5.4",
-    "unplugin-auto-import": "^0.12.1",
     "vite": "^3.2.5",
+    "vite-plugin-style-import": "1.4.1",
     "vue-tsc": "^0.29.8"
   }
 }
