--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "echarts": "5.3.2",
     "sass": "^1.57.1",
     "scss": "^0.2.4",
     "svgo": "^3.0.2",
