--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@faker-js/faker": "7.3.0",
     "@vitejs/plugin-vue": "^2.3.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "typescript": "^4.5.4",
